gccida/c3/push_block
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/push_block/src/expr.c:3586:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v12; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/push_block/src/expr.c:3590:23: error: use of undeclared identifier 'machine_mode'
v5 = convert_modes( ( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), ptr_mode, size, 1); 
                      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/push_block/src/expr.c:3607:26: error: use of undeclared identifier 'machine_mode'
v9 = copy_to_mode_reg( ( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), v5); 
                         ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/push_block/src/obj/expr.o] Error 1
